2003-01-07  Braden McDaniel  <braden@endoframe.com>

        * configure.ac, m4/Makefile.am, m4/ax_check_gl.m4, m4/gl.m4,
          m4/glut.m4:  Replaced OV_CHECK_GL with AX_CHECK_GL.

2003-01-05  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4, m4/glut.m4:  Added ac-archive-style doc-comments.

2003-01-03  Braden McDaniel  <braden@endoframe.com>

        * m4/glut.m4:  Include -lXi in GLUT_LIBS.

2003-01-02  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4:  Fix for --without-x.  Apparently when configuring
          --without-x, $x_includes and $x_libraries are set to "NONE".

2002-12-27  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp:  Added doc-comments.

        * src/openvrml/OpenVRML/browser.cpp:  Use newer form of
          UnsupportedInterface constructor.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Changed
          AbstractLight::renderScoped to take a Viewer & instead of a
          Viewer *.

        * src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h:
          Made NodeVisitor destructor non-throwing.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Added GroupingNode
          abstract node type.

        * src/openvrml/OpenVRML/node.h:  Removed obsolete FontFace class
          declaration.

2002-12-26  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/node.h:  Made Node::visited private.

        * src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h:
          Moved NodePath typedef from Node class to OpenVRML namespace;
          use a std::deque instead of a std::list.

        * src/openvrml/OpenVRML/node.h:  Removed relocate stuff
          (prematurely checked in by accident).
