@@ -1,5 +1,5 @@
 EXTRA_DIST = \
         acx_pthread.m4 \
         ax_check_gl.m4 \
-        glut.m4 \
+        ax_check_glut.m4 \
         jdk.m4
