@@ -3,6 +3,9 @@
         * configure.ac, m4/Makefile.am, m4/ax_check_gl.m4, m4/gl.m4,
           m4/glut.m4:  Replaced OV_CHECK_GL with AX_CHECK_GL.
 
+        * configure.ac, m4/Makefile.am, m4/ax_check_glut.m4, m4/glut.m4:
+          Replaced OV_CHECK_GLUT with AX_CHECK_GLUT.
+
 2003-01-05  Braden McDaniel  <braden@endoframe.com>
 
         * m4/gl.m4, m4/glut.m4:  Added ac-archive-style doc-comments.
